[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bubble_api"
version = "0.3.1"
authors = [
  { name="Dylan NINA", email="settorac.nina@gmail.com" },
]
description = "Interactions with Bubble.io in Python made easy"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'requests >= 2.28.1, < 2.29.0',
    'pydantic >= 1.10.4, < 1.11.0',
    'pandas >= 1.5.2, < 1.6.0',
]

[project.urls]
"Homepage" = "https://github.com/settorac-nina/bubble-api"
"Bug Tracker" = "https://github.com/settorac-nina/bubble-api/issues"
