[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bubble_api"
version = "0.4.0"
authors = [
  { name="Dylan NINA", email="settorac.nina@gmail.com" },
    {name="Mathis Bourdin", email="mathisbrdn@gmail.com"}
]
description = "Interactions with Bubble.io API in Python made easy !"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'requests',
]

[project.urls]
"Homepage" = "https://github.com/settorac-nina/bubble-api"
"Bug Tracker" = "https://github.com/settorac-nina/bubble-api/issues"
