[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bubble_api"
version = "0.5.1"
authors = [
    { name="Dylan NINA", email="settorac.nina@gmail.com" },
    { name="Mathis Bourdin", email="mathisbrdn@gmail.com" },
]
description = "Interactions with Bubble.io API in Python made easy !"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'requests',
    'httpx',
]

[tool.setuptools]
packages = ["bubble_api", "bubble_api.asyncio"]

[project.urls]
"Homepage" = "https://github.com/settorac-nina/bubble-api"
"Bug Tracker" = "https://github.com/settorac-nina/bubble-api/issues"
